--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "start-server": "json-server --watch data/db.json"
+    "server": "json-server --watch data/db.json"
   },
   "dependencies": {
     "core-js": "^3.6.5",
